// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tkit-async/asyncModel works ok effects should work ok: doAsync 1`] = `
Array [
  Object {
    "ASYNC_ID": 1,
    "fetch": "function",
    "isModal": true,
  },
]
`;

exports[`tkit-async/asyncModel works ok effects should work ok: doAsyncCancel 1`] = `
Array [
  Object {
    "ASYNC_ID": 1,
    "successMsg": false,
  },
]
`;

exports[`tkit-async/asyncModel works ok effects should work ok: doAsyncConfirmed params 1`] = `
Array [
  Object {
    "ASYNC_ID": 2,
    "callback": [Function],
    "fetch": "function",
    "params": 1,
  },
  Object {
    "ASYNC_ID": 2,
    "isSuccess": true,
    "response": Object {
      "code": 0,
      "result": Object {
        "id": 0,
      },
    },
  },
]
`;

exports[`tkit-async/asyncModel works ok effects should work ok: doAsyncConfirmed paramsGenerator 1`] = `
Array [
  Object {
    "ASYNC_ID": 3,
    "callback": [Function],
    "fetch": "function",
    "paramsGenerator": [Function],
  },
  Object {
    "ASYNC_ID": 3,
    "isSuccess": true,
    "response": Object {
      "code": 0,
      "result": Object {
        "id": 0,
      },
    },
  },
]
`;

exports[`tkit-async/asyncModel works ok effects should work ok: doAsyncConfirmed paramsGenerator error 1`] = `
Array [
  Object {
    "ASYNC_ID": 4,
    "callback": [Function],
    "fetch": "function",
    "paramsGenerator": [Function],
  },
  Object {
    "ASYNC_ID": 4,
    "isSuccess": false,
    "response": Object {
      "code": 10002,
      "message": undefined,
    },
  },
]
`;

exports[`tkit-async/asyncModel works ok reducers reducer should work ok: doAsyncConfirmedStart 1`] = `
Object {
  "asyncStatus": Array [
    Object {
      "ASYNC_ID": 1,
      "confirmed": true,
      "errorMsg": null,
      "isFetch": true,
      "response": null,
      "successMsg": null,
    },
  ],
}
`;

exports[`tkit-async/asyncModel works ok reducers reducer should work ok: doAsyncConfirmedStart 2 1`] = `
Object {
  "asyncStatus": Array [
    Object {
      "ASYNC_ID": 1,
      "confirmed": true,
      "errorMsg": null,
      "isFetch": true,
      "response": null,
      "successMsg": null,
    },
    Object {
      "ASYNC_ID": 2,
      "confirmed": true,
      "errorMsg": null,
      "isFetch": true,
      "response": null,
      "successMsg": null,
    },
  ],
}
`;

exports[`tkit-async/asyncModel works ok reducers reducer should work ok: doAsyncEnd 1`] = `
Object {
  "asyncStatus": Array [
    Object {
      "ASYNC_ID": 1,
      "confirmed": true,
      "errorMsg": null,
      "isFetch": true,
      "response": null,
      "successMsg": null,
    },
    Object {
      "ASYNC_ID": 2,
      "confirmed": false,
      "errorMsg": null,
      "isFetch": false,
      "response": null,
      "successMsg": null,
    },
  ],
}
`;

exports[`tkit-async/asyncModel works ok reducers reducer should work ok: doAsyncEnd 2 1`] = `
Object {
  "asyncStatus": Array [
    Object {
      "ASYNC_ID": 1,
      "confirmed": true,
      "errorMsg": null,
      "isFetch": true,
      "response": null,
      "successMsg": null,
    },
  ],
}
`;

exports[`tkit-async/asyncModel works ok reducers reducer should work ok: doAsyncStart 1`] = `
Object {
  "asyncStatus": Array [
    Object {
      "ASYNC_ID": 1,
      "confirmed": false,
      "errorMsg": null,
      "isFetch": false,
      "response": null,
      "successMsg": null,
    },
  ],
}
`;
